# apps/backend/src/billing-type/billing-type.controller.ts
@@ -1,5 +1,5 @@
 import { Controller, Get } from '@nestjs/common';
-import { ApiOperation, ApiResponse, ApiTags } from '@nestjs/swagger';
+import { ApiResponse, ApiTags } from '@nestjs/swagger';
 
 import { BillingTypeService } from './billing-type.service';
 import { BillingTypeDTO } from './entities/billing-type.entity';
@@ -9,10 +9,9 @@ import { BillingTypeDTO } from './entities/billing-type.entity';
 export class BillingTypeController {
   constructor(private billingTypeService: BillingTypeService) {}
 
-  @Get('/GetBillingType')
-  @ApiOperation({ summary: 'Get billing types' })
-  @ApiResponse({ status: 200, description: 'List of billing types', type: [BillingTypeDTO] })
-  async getAllBillingTypes(): Promise<BillingTypeDTO[]> {
+  @Get('/GetBillingTypes')
+  @ApiResponse({ status: 200, description: 'Success', type: [BillingTypeDTO] })
+  async getBillingTypes(): Promise<BillingTypeDTO[]> {
     return this.billingTypeService.getBillingTypes();
   }
 }
